plugins {
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java'
	id 'war'
	id 'jacoco'
	id 'eclipse'
}

group = 'de.htwg'
//sourceCompatibility = '21'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

compileJava.options.encoding = 'UTF-8'

eclipse.wtp.facet {
    // Change the version of the Dynamic Web Module facet
    facet name: 'jst.web', version: '5.0'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.springframework.session:spring-session-core'
	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
	implementation 'javax.validation:validation-api:2.0.1.Final'
	implementation 'org.apache.commons:commons-lang3:3.17.0'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.0'
}


bootWar {
	manifest {
		attributes 'Main-Class': 'de.htwg.retroweb.RetrowebApplication'
	}
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
	}
}

tasks.named('test') {
	jvmArgs = ["-XX:+EnableDynamicAgentLoading"]
	useJUnitPlatform()
}
